--- a/src/assets/sass/custom/_variables.scss
+++ b/src/assets/sass/custom/_variables.scss
@@ -55,6 +55,7 @@ $purple:  #8965e0 !default;
 $pink:    #f3a4b5 !default;
 $red:     #f5365c !default;
 $orange:  #fb6340 !default;
+$mineral-glow : #fde9ce !default;
 $yellow:  #ffd600 !default;
 $green:   #2dce89 !default;
 $teal:    #11cdef !default;
@@ -68,6 +69,7 @@ $colors: map-merge((
   "pink":       $pink,
   "red":        $red,
   "orange":     $orange,
+  "mineral-glow": $mineral-glow,
   "yellow":     $yellow,
   "green":      $green,
   "teal":       $teal,
